--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,8 @@
 html {
   box-sizing: border-box;
+  line-height: 1.5;
+  color: #222;
+  font: normal 1rem/1.5 'PT Serif',serif;
 }
 
 *, *::before, *::after {
@@ -10,6 +13,19 @@ html {
   background-color: #c9b5ab;
 }
 
+img {
+  width: 100%;
+}
+
+figcaption {
+  font-style: italic;
+}
+
+.cycle {
+  font-weight: bold;
+  font-size: 1.125rem;
+}
+
 h1 {
   color: #3f1622;
   font-family: 'PT Sans', sans-serif;
@@ -18,12 +34,12 @@ h1 {
 nav {
   color: #8f2440;
   font-family: 'PT Sans', sans-serif;
+  font-weight: bold;
 }
 
 a {
   color: #8f2440;
   text-decoration: none;
-  font-weight: bold;
   font-family: 'PT Sans', sans-serif;
 }
 
@@ -34,4 +50,9 @@ li {
 
 h2 {
   color: #3f1622;
+}
+
+blockquote {
+  font-size: 1.5rem;
+  font-style: italic;
 }
